# `kglab` changelog

## 0.1.5

2020-12-??

  * use `mkdocs` to generate documentation
  * impl `load_ttl_text()` and `save_ttl_text()` to DeSer as text
  * corrected the `networkx` examples to use `DiGraph` for directed graphs
  * add method to return SPARQL query result set as a `pandas` DataFrame
  * add `Subgraph` class for projecting onto `networkx`
  * add `Measure` class for measuring graphs and creating simplex generators
  * add `ShapeFactory` and related classes for evolving shape prediction
  * integrating `OWL-RL` inference


## 0.1.4

2020-12-06

  * added `pySHACL` examples
  * resolved Google Colab errors registering the `rdflib-jsonld` plugin
  * comparing timing info across serialization methods
  * simplified the example notebook naming convention


## 0.1.3

2020-12-04

  * resolved removal of `grave` dependencies
  * added arrows to `pyvis` example by making it a directed graph
  * kudos @dmoore247


## 0.1.2

2020-11-30

  * support for dependabot
  * added a logo
  * interactive visualizations in `pyvis` and `grave`
  * SPARQL query examples
  * running graph algorithms in `networkx`
  * Parquet files using `pyarrow`
  * examples of annotation that combine use of SPARQL, SKOS, etc.
  * added instructions for installing/running JupyterLab
  * examples of SRL inference using `pslpython`
  * demo use of vector embedding with `gensim`
  * examples of string similarity with `pylev`


## 0.1.1

2020-11-09

  * first distribution on PyPi


## 0.1.0

2020-10-25

  * initial check-in