@@ -331,6 +331,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Huh. Nobody wants to fight?!? That doesn't seem especially Viking-like!\n",
+    "Nor do these query results seem to fit an intuitive sense of our graph data.\n",
+    "Let's use *inference* on the graph to help fix that."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Inference based on `owlrl`\n",
     "\n",
     "Now we can call the `infer_owlrl_closure()` method to add triples to the graph based on OWL inference:"
@@ -1868,6 +1877,37 @@
    "metadata": {},
    "source": [
     "These are the two relations added. Now that seems much more Viking-like!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 1:**\n",
+    "\n",
+    "Starting from an initial load `kg.load_ttl(\"dat/gorm.ttl\")` of this example Viking graph, show how to combine use of OWL and SKOS inference plus SPARQL queries to enumerate the RDF nodes in the KG which represent children of Vikings who enjoy some form of fighting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 2:**\n",
+    "\n",
+    "Use the `Measure` class to \n",
+    "\n",
+    "  1. Tally occurances for each RDF node in the KG that's used as a *subject* or *object*\n",
+    "  1. Calculate a probability distribution for nodes based on this occurance data\n",
+    "  1. Render this distribution as a histogram"
    ]
   }
  ],
