@@ -1,4 +1,5 @@
 gensim >= 3.8.3
+GPUtil >= 1.4.0
 matplotlib >= 3.2.1
 networkx >= 2.5
 numpy >= 1.19.4
