@@ -30,6 +30,7 @@ setuptools.setup(
     python_requires=">=3.6",
     install_requires=[
           "gensim",
+          "gputil",
           "matplotlib",
           "networkx",
           "numpy",
